lesson_labs/4_Services/6_external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 10.244.0.171
    # - ip: 22.22.22.22
    ports:
    - port: 8080
