lesson_labs/4_Services/11_kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  # ingressClassName: nginx -- minikube
  ingressClassName: azure-application-gateway
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # name: kubia-nodeport -- minikube
            name: kubia
            port:
              number: 80
