lesson_labs/4_Services/12_kubia-ingress-multi-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  ingressClassName: azure-application-gateway
  # ingressClassName: nginx -- minikube
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /kubia
        pathType: Prefix
        backend:
          service:
            # name: kubia-nodeport -- minikube
            name: kubia
            port:
              number: 80
  - host: foo.example.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: kubia2
            port:
              number: 80
